# btools

./: .gitignore  README.md  pyproject.toml
btools/: clear_chmod.py  npread.py  psword.py  rm_npm.py  todict.py  utils.py
jtools/: jtools.js  package.json
src/btools/: __init__.py  a.py  bumpver.py  clear_chmod.py  dfplot.py  npread.py  psword.py  publish.py  rm_npm.py  text2.py  todict.py
