[project]
name = "btools"
version = ""{new_version}""
description = "Add your description here"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "path>=16.14.0",
    "semver>=3.0.2",
    "numpy>=1.26.4",
    "click>=8.1.7",
    "ruyaml>=0.91.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
bumpver = "btools.bumpver:main"
a = "btools.a:main"
clear_chmod = "btools.clear_chmod:main"
npread = "btools.npread:main"
dfplot = "btools.dfplot:main"
psword = "btools.psword:main"
rm_npm = "btools.rm_npm:main"
text2 = "btools.text2:main"
todict = "btools.todict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/btools"]
