[project]
name = "btools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "path",
    "semver",
    "numpy >1.24.4",
    "click",
    "ruyaml",
    "pandas",
    "matplotlib",
    "pydash",
    "ruff>=0.11.10",
    "cyclopts>=4.5.3",
]

[project.scripts]
bumpver = "btools.bumpver:main"
a = "btools.a:main"
clear_chmod = "btools.clear_chmod:main"
npread = "btools.npread:main"
dfplot = "btools.dfplot:main"
psword = "btools.psword:main"
rm_npm = "btools.rm_npm:main"
text2 = "btools.text2:main"
todict = "btools.todict:main"
uvpub = "btools.publish:main"

[tool.uv]
package = true
