[project]
name = "btools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "path",
    "numpy >1.24.4",
    "click",
    "ruyaml",
    "pandas",
    "matplotlib",
    "pydash",
    "ruff>=0.11.10",
    "cyclopts>=4.5.3",
]

[project.scripts]
bumpver = "btools.bumpver:app"
a = "btools.a:app"
clear_chmod = "btools.clear_chmod:app"
npread = "btools.npread:app"
dfplot = "btools.dfplot:app"
psword = "btools.psword:app"
rm_npm = "btools.rm_npm:app"
text2 = "btools.text2:app"
todict = "btools.todict:app"

[tool.uv]
package = true
